--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     </div>
   </section>
-
+<!-- footer -->
 
     <footer class="footer d-flex align-items-center">
         <div class="container">
